[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/user-interface/dialogue-container/dialogue-container.gd" type="Script" id=1]

[node name="DialogueContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.811111
anchor_right = 0.9
anchor_bottom = 0.822223
margin_top = -34.0
margin_bottom = 25.9999
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DialogueBoxContainer" type="Control" parent="HBoxContainer"]
margin_right = 284.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 288.0
margin_right = 288.0
margin_bottom = 62.0
alignment = 1
